--- a/src/app/storymaps/tpl/ui/MainMediaContainerMap.html
+++ b/src/app/storymaps/tpl/ui/MainMediaContainerMap.html
@@ -27,4 +27,8 @@
 	<div class="mobilePopup mobileInfoWindow hideContent">
 		<div class="dijitContainer"></div>
 	</div>
+	
+	<div class="mapLocationError">
+		<div class="mapLocationMsg"></div>
+	</div>
 </div>
