--- a/src/app/storymaps/tpl/builder/settings/ViewMapOptions.html
+++ b/src/app/storymaps/tpl/builder/settings/ViewMapOptions.html
@@ -36,4 +36,24 @@
 			</a>
 		</label>
 	</div>
+      
+    <div class="" style="margin-top: 28px">
+      <label>
+        Maptiks Trackcode:   
+        <input type="text" class="form-control input-sm" />
+        <a href="#" class="help" data-toggle="tooltip" data-placement="right" title="Enter Maptiks trackcode">
+            <img class="helpImg" src="resources/tpl/builder/icons/builder-help.png">
+        </a>
+      </label>
+	</div>
+      
+    <div class="" style="margin-top: 28px">
+      <label>
+        Maptiks ID:   
+        <input type="text" class="form-control input-sm" />
+        <a href="#" class="help" data-toggle="tooltip" data-placement="right" title="Enter an ID for this story map. The ID will help organize this story map's entries within Maptiks.">
+            <img class="helpImg" src="resources/tpl/builder/icons/builder-help.png">
+        </a>
+      </label>
+	</div>  
 </div>
