--- a/src/app/storymaps/tpl/builder/settings/ViewMapOptions.html
+++ b/src/app/storymaps/tpl/builder/settings/ViewMapOptions.html
@@ -37,19 +37,19 @@
 		</label>
 	</div>
       
-    <div class="" style="">
+    <div>
       <label>
-        Maptiks Trackcode: <input type="text" class="form-control input-sm maptiks-trackcode" />
+        Maptiks Trackcode: <input type="text" class="form-control input-sm" id="maptiks-trackcode" />
         <a href="#" class="help" data-toggle="tooltip" data-placement="right" title="Enter Maptiks trackcode">
             <img class="helpImg" src="resources/tpl/builder/icons/builder-help.png">
         </a>
       </label>
 	</div>
       
-    <div class="" style="">
+    <div>
       <label>
         Maptiks ID:   
-        <input type="text" class="form-control input-sm maptiks-id" />
+        <input type="text" class="form-control input-sm" id="maptiks-id" />
         <a href="#" class="help" data-toggle="tooltip" data-placement="right" title="Enter an ID for this story map. The ID will help organize this story map's entries within Maptiks.">
             <img class="helpImg" src="resources/tpl/builder/icons/builder-help.png">
         </a>
