--- a/src/app/storymaps/tpl/builder/Help.css
+++ b/src/app/storymaps/tpl/builder/Help.css
@@ -1,9 +1,9 @@
 /*
  * Application unique help container
  */
- 
+
 #builderHelp {
-	display: none; 
+	display: none;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -45,7 +45,7 @@
 /*
  * Common
  */
- 
+
 .builderHelp .help-header,
 .builderHelp .helpNav,
 .builderHelp .helpFooter {
@@ -65,7 +65,7 @@
 	text-align: left;
 	line-height: 1.1;
 	font-size: 1.4em;
-	font-family: 'open_sanssemibold', sans-serif;	
+	font-family: 'open_sanssemibold', sans-serif;
 	margin: -2px 14px 15px 14px;
 }
 
@@ -198,7 +198,7 @@
 /*
  * Content
  */
- 
+
 .builderHelp .helpText {
 	font-size: 1em;
 	margin: 0.5em;
@@ -249,8 +249,8 @@
 /*
  * Content - TIPS
  */
- 
-.builderHelp .tips-sync-on, 
+
+.builderHelp .tips-sync-on,
 .builderHelp .tips-sync-off {
 	cursor: pointer;
 }
@@ -261,18 +261,19 @@
 
 .builderHelp .helpFooter {
 	position: absolute;
-	left: 10px;
+	left: 14px;
 	right: 10px;
 	bottom: 10px;
-	height: 34px;
+	height: 38px;
 	color: #CECECE;
 	font-style: italic;
 }
 
 .builderHelp .helpFooter .btn-external-help {
-	padding-left: 2px;
+	padding-left: 0px;
 	font-style: italic;
-	vertical-align: 0px;
+  display: block;
+  margin-top: -5px;
 }
 
 .builderHelp .helpFooter .footerBtn {
